fix: corrected all crm-request-controller issues and lintings
