# docs/openapi-v1-compiled.json
@@ -306,7 +306,7 @@
         }
       }
     },
-    "/admin-crm/getCrmData": {
+    "/admin-crm/crm-requests": {
       "get": {
         "summary": "Get list of CRM requests",
         "tags": [
@@ -333,7 +333,7 @@
             "schema": {
               "type": "string",
               "format": "date",
-              "example": "27-12-2025"
+              "example": "2025-12-27"
             },
             "required": false,
             "description": "Filter CRM requests created on or after this date (YYYY-MM-DD)"
@@ -344,7 +344,7 @@
             "schema": {
               "type": "string",
               "format": "date",
-              "example": "31-12-2025"
+              "example": "2025-12-31"
             },
             "required": false,
             "description": "Filter CRM requests created on or before this date (YYYY-MM-DD)"
@@ -489,7 +489,7 @@
         ],
         "responses": {
           "200": {
-            "description": "Payments CSV file generated successfully",
+            "description": "CRM data CSV file generated successfully",
             "content": {
               "text/csv": {
                 "schema": {
@@ -532,7 +532,7 @@
                   "id": {
                     "type": "string",
                     "description": "Unique identifier of the details",
-                    "example": "13"
+                    "example": "10"
                   }
                 }
               }
